--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ['php81']
+nixPkgs = ['php81', 'composer']
 
 [phases.build]
-cmds = ['echo "Build complete"']
+cmds = ['composer install --ignore-platform-reqs --no-dev || echo "Composer install skipped"']
 
 [start]
 cmd = 'php -S 0.0.0.0:$PORT -t .'
